updated discounts and chinese

--- a/views/discounts.ejs
+++ b/views/discounts.ejs
@@ -6,13 +6,15 @@
 <div class='container content'>
   <div class='row'>
     <div class='span16'>
+      <p> You may use multiple discounts that we have listed below to create an unbeatable price. For example, if you have register before April 10th, and refer two other students to SVPrep, you will receive a <b>$175</b> discount from your original $450 fee and pay a total of <b>$275!</b>
+      </p>
       <h3>Early Bird Discount</h3>
       <p>
-        If you register by April 10th, you will receive a <b>$25</b> off your total purchase price.
+        Get <b>$75</b> off your total purchase price if you sign up before <b>April 10th</b>.
       </p>
       <h3>Multiple Class Discount</h3>
       <p>
-		For each additional class you sign up for after the first one, you will receive <b>$50</b> off your total. For example, if you sign up for three classes, you will get a $100 discount from your total purchase price.
+      You will receive <b>$50</b> off your total for each additional class you sign up for after the first one. For example, if you sign up for three classes, you will get a $100 discount from your total purchase price.
       </p>
       <h3>Sibling Discount</h3>
       <p>
