--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -78,7 +78,7 @@
           </li>
           <li>
             <a class='switch' href='/?lang=ch' title='Chinese'>
-              Chinese
+              Switch to Chinese
             </a>
           </li>
         </ul>
