--- a/views/layout_ch.ejs
+++ b/views/layout_ch.ejs
@@ -78,7 +78,7 @@
           </li>
           <li>
             <a class='switch' href='/?lang=en' title='English'>
-              English
+              Switch to English
             </a>
           </li>
         </ul>
