--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -11,6 +11,7 @@
       </p>
       <h2>Introduction to Java & Computer Science ($450 / 5 weeks)</h2>
       <div id="java">
+        <h4 class="course-instructor">Course instructor: Gerald Fong and Sharad Vikram</h4>
         <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - (Saturday 10AM - 1PM, Sunday 2PM - 5PM)</h5>
         <h5 class="course-subheader">Intended for students entering grades 7-10</h5>
         <p>
@@ -30,18 +31,18 @@
       </div>
       <h2>Public Speaking ($450 / 5 weeks)</h2>
       <div id="pubsp">
-        <!-- <h4 class="course-instructor">Course instructors: Carl Shan and Ashwin Aravind</h4> -->
+        <h4 class="course-instructor">Course instructor: Pavan Upadhyayula</h4>
         <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - (Saturday 2PM - 5PM, Sunday 10AM - 1PM)</h5>
         <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM, Saturday 2PM - 5PM)</h5> -->
         <h5 class="course-subheader">Intended for students entering grades 5-9</h5>
         <p>
-          This course will emphasize the teaching of confidence-building skills, public speaking techniques and principles for succeeding in life. The class will be oriented around both learning how to write and speak effectively, and will culminate in a class project that will ask students to create a final speech and present it to an audience of parents and peers. This class will revolve around the instruction of not only public speaking, but also life lessons. We hope to be a positive role model for all of our students.
+          This course will emphasize public speaking not as a singular event, but instead as an outgrowth of how individuals carry themselves on a daily basis. By focusing on confidence-building skills, verbal and non-verbal cues as well as an appreciation of one’s audience and subject material, this course will ensure that students know how to communicate effectively, persuasively and concisely. This class will culminate in a final project that will ask students to create a final speech and present it to an audience of parents and peers. The goal of this class is to impart life-lessons that will help students become leaders among their peers and beyond.
         </p>
       </div>
   
       <h2>Debate & Argumentation ($450 / 5 weeks)</h2>
       <div id="debarg">
-        <!-- <h4 class="course-instructor">Course instructors: Alan Kao</h4> -->
+        <h4 class="course-instructor">Course instructors: Alan Kao</h4>
         <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - Sunday 10AM - 1PM</h5>
         <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM)</h5> -->
         <h5 class="course-subheader">Intended for students entering grades 7-10</h5>
@@ -61,7 +62,7 @@
       </div>
       <h2>Essay Writing & Journalism ($450 / 5 weeks)</h2>
       <div id="essayWriting">
-        <!-- <h4 class="course-instructor">Course instructors: Alan Kao</h4> -->
+        <h4 class="course-instructor">Course instructors: Alina Zhu</h4>
         <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - Saturday 2PM - 5PM</h5>
         <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM)</h5> -->
         <h5 class="course-subheader">Intended for students entering grades 5-9</h5>
@@ -71,7 +72,7 @@
       </div>
       <h2>Introduction to Physics Mechanics ($450 / 5 weeks)</h2>
       <div id="debarg">
-        <!-- <h4 class="course-instructor">Course instructors: Alan Kao</h4> -->
+        <h4 class="course-instructor">Course instructors: Linda Xu</h4>
         <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - Saturday 10AM - 1PM</h5>
         <!-- <h5>Fremont - O-Mei Learning Center (Saturday 10AM - 1PM)</h5> -->
 	<h5 class="prereq-subhead">Prerequisites: Algebra, Geometry (recommended)</h5>
