--- a/views/instructors.ejs
+++ b/views/instructors.ejs
@@ -13,7 +13,7 @@
         </p>
       </div>
       <div class='span14'>
-        <h4>Gerald Fong, Organizer & Instructor</h4>
+        <h4>Gerald Fong, Organizer & Instructor - Computer Science</h4>
         <p>
 	Gerald Fong is a second year at UC Berkeley studying Electrical Engineering and Computer Science pursuing a 4 year Bachelors and Masters program focusing on Artificial Intelligence. He started his interest in EE&CS when he took eight CS courses and completed an internship during high school that lead to a patent pending in Data Warehousing algorithms. Since then he has interned at Twitter and has been offered internships at companies including Google, Facebook, LinkedIn, and Dropbox. He has also competed in various hackathons alongside Sharad Vikram winning first place in over four hackathons. Gerald has also been an active leader in other areas. At Lynbrook, he was valedictorian graduation speaker and served as Class Vice President, Vice President of the Model UN Club, President of the Piano Club, and attained Eagle Scout Rank in Troop 495. Gerald is excited to take his academic and industry experiences to teach the next generation! 
         </p>
@@ -26,7 +26,7 @@
         </p>
       </div>
       <div class='span14'>
-        <h4>Sharad Vikram, Organizer & Instructor</h4>
+        <h4>Sharad Vikram, Organizer & Instructor - Computer Science</h4>
         <p>
 	Sharad Vikram is currently a sophomore at UC Berkeley, studying Electrical Engineering and Computer Science. Sharad's love of computer science is best shown by his internships at the San Diego Supercomputer Center, Cubic Transportation Systems, and RewardMe. He will also be interning at Facebook this summer. Sharad has been actively programming at Berkeley and has won several hackathons, beating teams from Stanford, Harvard, and MIT. A graduate of Torrey Pines High School in San Diego, Sharad is currently an Undergraduate Student Instructor at Berkeley, teaching the introductory computer science course and he will be passing on his knowledge to SVPrep students this summer!
         </p>
@@ -72,6 +72,19 @@
         </p>
       </div>
     </div>
+    <div class='row'>
+      <div class='span2'>
+        <p>
+          <img alt='Pavan' src='/images/facepics/pavan.png' width='100' />
+        </p>
+      </div>
+      <div class='span14'>
+        <h4>Pavan Upadhyayula, Instructor - Public Speaking</h4>
+        <p>
+          Pavan Upadhyayula is currently a sophomore at the University of California, Berkeley where he is majoring in Molecular and Cell Biology in hopes of going into Medicine. In High school, he was captain of his High School Debate Team qualifying to be one of the top seventy teams in the nation as well as winning numerous speaker awards at the nation’s largest debate tournaments. Aside from debate, Pavan is an accomplished magician who has not only created a community of Magicians at Berkeley but has also started a program, Magic for Medicine aimed at using magic and conversation as a means of therapy. Although this is his first summer teaching public speaking, he is extremely excited for the opportunity to meet all of you!
+        </p>
+      </div>
+    </div>
   </div>
   <div class='row'>
     <h2 class="heading">Founders</h2>
@@ -95,7 +108,7 @@
         </p>
       </div>
       <div class='span14'>
-        <h4>Carl Shan, Co-Founder and Instructor - Public Speaking</h4>
+        <h4>Carl Shan, Co-Founder</h4>
         <p>
           Carl Shan is currently a student at the University of California, Berkeley where he intends to major in Statistics, with a minor in Philosophy. In high school, he was captain of Lynbrook's High School's debate team. Over the course of his career, he has won numerous championships, including the nation's largest debate event, and advanced to quarterfinals or better at a multitude of other tournaments. In addition to being an accomplished debater, Carl has been published numerous times in local, national and international publications. Carl is also the co-founder of CompassPoint Mentorship, a peer-to-peer mentoring organization that helps point students in the right direction. He taught a public speaking and writing course last summer and looks forward to meeting this year's new batch of students!
         </p>
