--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -48,12 +48,12 @@
           </li>
           <li>
             <a class='<%= page == "courses" ? "btn disabled" : "" %>' href='/courses'>
-              Courses & Pricing
+              Course & Pricing
             </a>
           </li>
           <li>
             <a class='<%= page == "logistics" ? "btn disabled" : "" %>' href='/logistics'>
-              Timings & Location
+              Time & Location
             </a>
           </li>
           <li>
@@ -72,13 +72,13 @@
             </a>
           </li>
           <li>
-            <a class='btn primary' href='/signup' title='Sign Up'>
-              Sign Up
+            <a class='switch' href='/?lang=ch' title='Chinese'>
+              中国语言
             </a>
           </li>
           <li>
-            <a class='switch' href='/?lang=ch' title='Chinese'>
-              Switch to Chinese
+            <a class='btn primary' href='/signup' title='Sign Up'>
+              Sign Up
             </a>
           </li>
         </ul>
