--- a/views/layout_ch.ejs
+++ b/views/layout_ch.ejs
@@ -72,13 +72,13 @@
             </a>
           </li>
           <li>
-            <a class='btn primary' href='/signup?lang=ch' title='Sign Up'>
-              登录
+            <a class='switch' href='/?lang=en' title='English'>
+              English
             </a>
           </li>
           <li>
-            <a class='switch' href='/?lang=en' title='English'>
-              Switch to English
+            <a class='btn primary' href='/signup?lang=ch' title='Sign Up'>
+              登录
             </a>
           </li>
         </ul>
