updated some chinese

--- a/views/layout_ch.ejs
+++ b/views/layout_ch.ejs
@@ -38,32 +38,32 @@
         <ul class='nav'>
           <li>
             <a class='<%= page == "home" ? "btn disabled" : "" %>' href='/?lang=ch'>
-              首页
+              首頁
             </a>
           </li>
           <li>
             <a class='<%= page == "instructors" ? "btn disabled" : "" %>' href='/instructors?lang=ch'>
-              老师
+              教師簡介
             </a>
           </li>
           <li>
             <a class='<%= page == "courses" ? "btn disabled" : "" %>' href='/courses?lang=ch'>
-              课程价格
+              課程與價格
             </a>
           </li>
           <li>
             <a class='<%= page == "logistics" ? "btn disabled" : "" %>' href='/logistics?lang=ch'>
-              时序及地点
+              時間與地點
             </a>
           </li>
           <li>
             <a class='<%= page == "testimonials" ? "btn disabled" : "" %>' href='/testimonials?lang=ch'>
-              证明
+              學員反饋
             </a>
           </li>
           <li>
             <a class='<%= page == "faq" ? "btn disabled" : "" %>' href='/faq?lang=ch'>
-              常问问题
+              常見問題
             </a>
           </li>
           <li>
