--- a/views/index_ch_old.ejs
+++ b/views/index_ch_old.ejs
@@ -1,6 +1,6 @@
     <div class='hero ac'>
       <div class='container'>
-        <h2>矽谷品質的創新教學</h2>
+        <h2>用硅谷的标准来创新地教学</h2>
         <br />
         <div id="myCarousel" class="carousel"> 
           <!-- Carousel indicators 
@@ -30,23 +30,22 @@
       <div class='row'>
         <div class='span12'>
           <h2>
-            “兩個孩子開始上課以後，我突然發現他們學了很多。”
-          </h2>
+              “孩子俩开始上课以后，我突然发现他们学了很多。”          </h2>
           <small>
-            ——學員家長，2012年夏
+             －2012年夏天的家长。
           </small>
         </div>
         <div class='span4'>
           <p class='ac'>
-          <a class='btn huge success' href='/courses' style='width:90%' title='View Course Offerings'>
+          <a class='btn huge success' href='/courses?lang=ch' style='width:90%' title='View Course Offerings'>
             <strong>
-              課程介紹
+                课程介绍
             </strong>
           </a>
           </p>
           <h3 class="ac" style='line-height: 20px;'>
             <small>
-              第壹次課免費！
+                第一类是免费的！
             </small>
           </h3>
           <!-- <h3 class='ac' style='line-height: 1;'>
@@ -63,26 +62,26 @@
         <div class='span8'>
           <div class='row'>
             <div class='span8'>
-              <h3>創新時代的創新課程</h3>
+                <h3>创新时代的创新课程</h3>
               <p>
-            矽谷培訓中心（SVPrep）意識到人們已經進入了壹個新的時代。我們的課程充分體現出我們對學生和學生未來的重視。我們的課程包括：Java入門、公開演講、辯論。
+                  硅谷考试培训中心（SVPrep）知道我们已经进入了一个新的时代。我们的课程表现出我们对学生和学生的未来的重视。我们的课程包括：Java入门，公开演讲，辩论。
               </p>
             </div>
           </div>
           <div class='row'>
             <div class='span8'>
-              <h3>評價與優勢</h3>
+              <h3>两年的经验</h3>
               <p>
-            “每個家長都知道提高子女公眾演講技巧的重要性。因此，我相信許多灣區的家長會讓孩子參加各種形式的課外活動－－也包括我自己在內。我覺得SVPrep有這些優勢：
+                  “每个家长都认识提高子女的公众演讲技巧的重要性。因此，我相信许多在海湾地区的家长会把孩子送到某种形式的课外活动－－我自己也是唯一个家长。我觉得SVPrep有这些优点：
               </br></br>
 
-              <strong>1. 激情。</strong> SVPrep的青年老師用激情把他們的學習經驗傳授給他們的學生。他們很努力，並且用他們自己的時間單獨幫助學生。平常妳在其他的暑期活動中看不到這種付出。
+          <strong>1. 激情。</strong> SVPrep的青年老师显示出其强大的激情，特别喜欢把他们的学习经验传授给他们的学生。他们很努力，既用他们自己的时间来帮助个个学生。你平常看不到这种贡献。
 
               </br></br>
-          <strong>2. 年齡差異小。</strong> 所有的老師都很年輕。他們真正了解自己的學生，學生也覺得更容易與老師互動。同時，老師們仍然具有權威，學生們也會聽從他們的指示。”
+              <strong>2. 年龄差异特别小。</strong> 所有的老师都很年轻。他们真正了解自己的学生，而学生觉得更容易与老师互动。同时，老师们仍然有权威，学生也按照他们的指示。
               </p>
               <p>
-              —家長，2012年夏
+              －2012年夏天的家长。
               </p>
             </div>
           </div>  
@@ -90,28 +89,28 @@
         <div class='span8'>
           <div class='row'>
             <div class='span8'>
-              <h3>我們用心</h3>
+              <h3>简单地说：我们关心</h3>
               <p>
-              我們的教師不僅擅長他們所教的科目，同時也深諳如何去教別人。我們的導師理解SVPrep對學生無私奉獻的文化。我們所有的老師將提供最高質量的教學。
+                  我们的课程教人不仅经历在他们的主题，但也有很深的了解，如何去教别人。硅谷准备大量强调我们的导师了解我们的文化对学生的承诺的重要性。我们所有的老师将提供最高质量的教育经验。
               </p>
             </div>
           </div>
           <div class='row'>
             <div class='span8'>
-              <h3>個性化課程</h3>
+              <h3>个性化课程</h3>
               <p>
-              我們將給予學生最高質量的 关注。不仅通过我们的课程教学，也通过教师举行的自由答疑时间，让学生得到1对1的反馈和关注。
+              我们为您提供的学生最高质量的关注不仅通过我们的课程，但教师将举行办公时间，让学生进来，并接受1对1的反馈和关注。
               </p>
             </div>
           </div>
           <div class='row'>
             <div class='span8'>
-              <h3>優秀的同齡導師</h3>
+              <h3>优朋导师</h3>
               <p>
-              不同於其他活動，我們不會聘請50歲的教師，因為他們很有可能不熟悉30年內教學內容的變化。在SVPrep，我們聘請的導師在近期曾經在所教科目上的有著深刻實踐，所以能夠讓學生找到共鳴。
+              不要满足于其他程序，聘请50岁的教师，在超过30年没有见过的材料。在硅谷的准备，我们只聘请导师，学生可以涉及到，并有很深的近期曝光的主题。
               </p>
               <p>
-              我們的導師曾經贏得過全國辯論邀請賽、在著名的報紙上發表文章、獲得過知名公司的實習機會（如Google，Facebook，Twitter等），獲得過知名大學的贊譽，如加州大學伯克利分校和麻省理工學院。
+              我们的教练赢得了全国辩论邀请赛，在著名的报纸上发表文章，获得了多个工作机会的公司，如谷歌，Facebook和Twitter，和冰雹的大学，如加州大学伯克利分校和麻省理工学院。
               </p>
             </div>
           </div>
@@ -127,12 +126,12 @@
         </small>
       </blockquote> -->
       <div class='well ac'>
-        <h3><a href='/courses' title='Check out our courses'>Check out our courses</a>,
-          <a href='/instructors' title='times and location'>
+        <h3><a href='/courses?lang=ch' title='Check out our courses'>Check out our courses</a>,
+          <a href='/instructors?lang=ch' title='times and location'>
             read about our instructors
           </a>
           or
-          <a href='/signup' title='sign up now!'>
+          <a href='/signup?lang=ch' title='sign up now!'>
             sign up now!
           </a>
           &rarr;
