--- a/views/layout_ch.ejs
+++ b/views/layout_ch.ejs
@@ -78,7 +78,7 @@
           </li>
           <li>
             <a class='btn primary' href='/signup?lang=ch' title='Sign Up'>
-              登录
+              報名
             </a>
           </li>
         </ul>
@@ -162,7 +162,7 @@
         <div class='row'>
           <div class='span10'>
             <h3 id='phone'>
-              热线：1-408-796-8978
+              熱線電話：1-408-796-8978
             </h3>
             <p>
               &copy; 2011-2013 <a href="/?lang=ch" title="SVPrep">SVPrep, Inc.</a> All Rights Reserved.
