--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -9,7 +9,13 @@
       <p>
       Silicon Valley Prep is offering a variety of courses for Summer 2013. Each course is taught by college students who had excelled in their field during their high school career. For details such as start an end date and location, visit <a href="/logistics">Timings & Location</a>.
       </p>
-      <h2>Introduction to Java & Computer Science ($450 / 5 weeks)</h2>
+      <p>
+      We also offer various discounts that you may be eligible for; visit <a href="/discounts">Discounts</a> for more information.
+      </p>
+      <p>
+      <h3><i>If you register for your classes before <u>May 1st</u>, you will receive <b>$50</b> off your total price.</i></h3>
+      </p>
+      <h2>Introduction to Java & Computer Science ($400 / 5 weeks)</h2>
       <div id="java">
         <h4 class="course-instructor">Course instructor: Gerald Fong and Sharad Vikram</h4>
         <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - (Saturday 10AM - 1PM, Sunday 2PM - 5PM)</h5>
@@ -29,7 +35,7 @@
           </ul>
         </p>
       </div>
-      <h2>Public Speaking ($450 / 5 weeks)</h2>
+      <h2>Public Speaking ($400 / 5 weeks)</h2>
       <div id="pubsp">
         <h4 class="course-instructor">Course instructor: Pavan Upadhyayula</h4>
         <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - (Saturday 2PM - 5PM, Sunday 10AM - 1PM)</h5>
@@ -40,7 +46,7 @@
         </p>
       </div>
   
-      <h2>Debate & Argumentation ($450 / 5 weeks)</h2>
+      <h2>Debate & Argumentation ($400 / 5 weeks)</h2>
       <div id="debarg">
         <h4 class="course-instructor">Course instructors: Alan Kao</h4>
         <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - Sunday 10AM - 1PM</h5>
@@ -60,7 +66,7 @@
           </ul>
         </p>
       </div>
-      <h2>Essay Writing & Journalism ($450 / 5 weeks)</h2>
+      <h2>Essay Writing & Journalism ($400 / 5 weeks)</h2>
       <div id="essayWriting">
         <h4 class="course-instructor">Course instructors: Alina Zhu</h4>
         <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - Saturday 2PM - 5PM</h5>
@@ -70,7 +76,7 @@
         Essay writing is one of the most important, but often undertaught, subjects in the field of education. Silicon Valley Prep’s Essay Writing and Journalism class will be an introduction into the proper planning, structuring and writing that goes into crafting both an exemplary essay and a piece of journalism. This course will help students develop their reading and writing skills, as they learn tools to analyze a piece of writing and create their own. Students will study several forms of writing, including poetry, persuasive speeches, and expository essays, as well as different styles, which range from creative free form to concise wording used for academia. Students who enroll in this course will be introduced to many high-level strategies for tackling intimidating essay prompts or subjects, such as those given in the SAT, SAT II Subject, and AP tests.
         </p>
       </div>
-      <h2>Introduction to Physics Mechanics ($450 / 5 weeks)</h2>
+      <h2>Introduction to Physics Mechanics ($400 / 5 weeks)</h2>
       <div id="debarg">
         <h4 class="course-instructor">Course instructors: Linda Xu</h4>
         <h5>Little Champs, 1025 S De Anza Blvd  San Jose, CA 95129 - Saturday 10AM - 1PM</h5>
@@ -93,7 +99,7 @@
           </ul>
         </p>
       </div>
-      <!-- <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#hssuper">How to be a High School Superstar ($450 / 5 weeks)</a></h2>
+      <!-- <h2><a href="#" data-toggle="collapse" data-parent="#accordion" data-target="#hssuper">How to be a High School Superstar ($400 / 5 weeks)</a></h2>
       <div id="hssuper" class="collapse">
         <p>
           Do you want to be a high-school superstar? Do you want to stand out, without burning out? This class will deconstruct success and de-mystify what it is about amazing accomplishments that we find truly impressive. In this class, we will help students discover their own passions, learn to take advantage of opportunities or create ones if they don’t exist, and actualize their potential.
