--- a/views/discounts.ejs
+++ b/views/discounts.ejs
@@ -6,11 +6,11 @@
 <div class='container content'>
   <div class='row'>
     <div class='span16'>
-      <p> You may use multiple discounts that we have listed below to create an unbeatable price. For example, if you have register before April 10th, and refer two other students to SVPrep, you will receive a <b>$175</b> discount from your original $450 fee and pay a total of <b>$275!</b>
+      <p> You may use multiple discounts that we have listed below to create an unbeatable price. For example, if you have register before May 1st, and refer two other students to SVPrep, you will receive a <b>$150</b> discount from your original $400 fee and pay a total of <b>$250!</b>
       </p>
       <h3>Early Bird Discount</h3>
       <p>
-        Get <b>$75</b> off your total purchase price if you sign up before <b>April 10th</b>.
+        Get <b>$50</b> off your total purchase price if you sign up before <b>May 1st</b>.
       </p>
       <h3>Multiple Class Discount</h3>
       <p>
