--- a/views/instructors.ejs
+++ b/views/instructors.ejs
@@ -75,6 +75,19 @@
     <div class='row'>
       <div class='span2'>
         <p>
+          <img alt='Alina' src='/images/facepics/alina.png' width='100' />
+        </p>
+      </div>
+      <div class='span14'>
+        <h4>Alina Zhu, Instructor - Essay Writing & Journalism</h4>
+        <p>
+        Alina Zhu is a third year at UC Berkeley double majoring in Economics and History, with an intended minor in German. She intends to write her undergraduate thesis on post 1945, US and World History, focusing on the rise of international institutions and changes to international law after World War II. Concerning economics, she is interested in microeconomics, game theory, and sustainable economic development. She is an honors student who has been on the Dean's List, a recipient of the Edward Frank Kraft Award for outstanding freshman work and a recipient of the Regents' and Chancellor's Scholarship, the most prestigious merit-based scholarship offered by UC Berkeley. Her passion for writing comes from her early love of reading, creative writing and literature. Over the last year, she has been working as a writing tutor at the Student Learning Center, where she helps students to develop practical writing skills. She plans on working as a discussion leader there over the summer, where she will teach, facilitate and lead undergraduate workshops. Outside of her academic interests, she has a love for travel, dance, witty conversations and good eats. She is currently studying abroad in Berlin at the Freie Universität, where she spends her days attempting to master the complicated yet beautiful German language, taking advantage of the extensive public transportation system, and eating enough döner and currywurst to gain ten pounds. She looks forward to sharing her passion and knowledge with her students!
+        </p>
+      </div>
+    </div>
+    <div class='row'>
+      <div class='span2'>
+        <p>
           <img alt='Pavan' src='/images/facepics/pavan.png' width='100' />
         </p>
       </div>
