--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,7 @@
       </div>
     </div>
     <div class='container content'>
+      <h1><center>Register before May 1st and receive $50 off your total price!</center></h1>
       <div class='row'>
         <div class='span12'>
           <h2>
